--- a/src/components/TodoList/index.css
+++ b/src/components/TodoList/index.css
@@ -1,7 +1,11 @@
+.formModal {
+    margin: 20px 0;
+}
+
 .form {
     width: 100%;
     border: 1px solid black;
-    margin: 20px 0;
+    margin: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -38,4 +42,13 @@
 }
 .removeBtn:active {
     background-color: #a91d18;
+}
+
+.detailShow {
+    border: 1px solid black;
+    padding: 20px;
+}
+
+.detailHide {
+    display: none;
 }
