--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@ h1 {
   text-align: center;
 }
 
+ul{
+  margin: 0;
+  padding: 0;
+}
+
 .newTask {
   width: 40%;
   border-right: 1px solid black;
